cache improvements